[project]
name = "titiler_pds"
description = "TiTiler for AWS Public Dataset"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
keywords = [
    "",
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]
version="0.1.0"
dependencies = [
    "awslambdaric",
    "brotli-asgi",
    "mangum",
    "pydantic-settings",
    "rasterio",
    "rio_tiler_pds",
    "tilebench",
    "titiler.core==0.15.5",
    "titiler.extensions==0.15.5",
    "titiler.mosaic==0.15.5",
    "titiler.application==0.15.5",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
]
deploy = [
    "aws-cdk.core==1.160.0",
    "aws-cdk.aws_lambda==1.160.0",
    "aws-cdk.aws_apigatewayv2==1.160.0",
    "aws-cdk.aws_apigatewayv2_integrations==1.160.0",
]
test = [
    "pytest", "pytest-cov", "pytest-asyncio", "requests"
]


[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
known_first_party = ["titiler"]
known_third_party = [
    "rasterio",
    "morecantile",
    "rio_tiler",
    "cogeo_mosaic",
    "geojson_pydantic",
    "starlette_cramjam",
]
default_section = "THIRDPARTY"

[tool.ruff]
select = [
    "D1",  # pydocstyle errors
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # flake8
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B905",  # ignore zip() without an explicit strict= parameter, only support with python >3.10
]

[tool.mypy]
no_implicit_optional = true
strict_optional = true
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::rasterio.errors.NotGeoreferencedWarning",
]
